--- a/vendas-ms/pom.xml
+++ b/vendas-ms/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.tech4me</groupId>
-	<artifactId>animais-ms</artifactId>
+	<artifactId>vendas-ms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>vendas-ms</name>
 	<description>Demo project for Spring Boot</description>
